[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/LcdSolid112.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/TemperatureDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
extra_spacing_bottom = -10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
extra_spacing_bottom = -7
font_data = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" groups=[
"notify_temperature",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -206.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 169.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 166.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemperatureKelvin" type="Label" parent="Labels"]
margin_right = 196.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "293K"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemperatureCelsius" type="Label" parent="Labels"]
margin_top = 71.0
margin_right = 196.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "20ºC"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemperatureFahrenheit" type="Label" parent="Labels"]
margin_top = 115.0
margin_right = 196.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "68ºF"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
